#3290 契約担当SA社員DTOに項目追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -475,6 +475,7 @@ momOrgId = 所属組織MoM組織ID
 orgHierarchyLevel = 所属組織階層レベル
 orgName = 所属組織名
 alesCompanyName = 販売会社名
+salesCompanyNameKana = 販売会社名（カナ）
 employeeName = 社員名
 salesDepartmentName = 部署名
 mailAddress = メールアドレス
