テスト修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -448,6 +448,7 @@ faxNumber = FAX番号
 estimation = 見積
 dealerName = 販売店名
 orgPhoneNumber = 会社代表電話番号
+orgFaxNumber = 会社代表FAX番号
 picName = 担当者名
 picDeptName = 担当者部署名
 picPhoneNumber = 担当者電話番号
@@ -638,8 +639,6 @@ customerContract = 顧客(契約用)
 contractOperationLogList = 契約操作履歴
 productContractList = 商品(契約用)
 companyNameKana = 企業名（カナ）
-phoneNumber = 会社代表電話番号
-faxNumber = 会社代表FAX番号
 companyRepresentativeName = 企業代表者名
 companyRepresentativeNameKana = MoM非連携_企業代表者名（カナ）
 picName = MoM非連携_担当者氏名
@@ -1049,7 +1048,6 @@ branchCustomerName = 支社名
 officeCd = 課所コード
 officeName = 課所名
 employeeCd = 営業コード
-employeeName = 営業名
 employeePhoneNumber = 担当営業電話番号
 employeeMailAddress = 担当営業メールアドレス
 ordererNumber = 注文番号
