問い合わせDTO修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -676,7 +676,6 @@ requestOriginName = 依頼者氏名
 requestFromName = 伝達者氏名
 requestToName = 被伝達者氏名
 requestToCandidateName = 被伝達者候補指名
-title = 件名
 communicationComment = コメント
 communicatedAt = 伝達日時
 productGrpMasterId = 商品グループマスタID
@@ -686,7 +685,7 @@ contactFromEmpId = 送信者MoM社員ID
 title = タイトル
 sendAt = 送信日時
 contactToList = 宛先
-contac = 問い合わせ
+content = 問い合わせ
 sendType = 送信タイプ
 contactToEmpId = 宛先MoM社員ID
 contactToEmail = 宛先メールアドレス
