#3699 FFM受注データファイル取込バッチ用エラーメッセージ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -400,19 +400,19 @@ FileImportBatchError.TYPE = Error
 FileImportBatchError.MSG = {0}ファイルの取込に失敗しました。
 BatchInfoCtgrErrorSkip.ID = RBA00014
 BatchInfoCtgrErrorSkip.TYPE = Error
-BatchInfoCtgrErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 情報区分が処理対象外なのでスキップします。
+BatchInfoCtgrErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 情報区分が処理対象外なので同じRTS見積番号を指定したデータの処理をスキップします。
 BatchEstimationNumberErrorSkip.ID = RBA00015
 BatchEstimationNumberErrorSkip.TYPE = Error
-BatchEstimationNumberErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 該当する見積番号および見積番号枝番が存在しないため処理をスキップします。
+BatchEstimationNumberErrorSkip.MSG = RTS見積番号＝{0} 該当する見積番号および見積番号枝番が存在しないため同じRTS見積番号を指定したデータの処理をスキップします。
 BatchEstimationStatusErrorSkip.ID = RBA00016
 BatchEstimationStatusErrorSkip.TYPE = Error
-BatchEstimationStatusErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 該当する見積のステータスが{3}なので処理をスキップします。
+BatchEstimationStatusErrorSkip.MSG = RTS見積番号＝{0} 該当する見積のステータスが{1}なので同じRTS見積番号を指定したデータの処理をスキップします。
 BatchEstimationNotFoundErrorSkip.ID = RBA00016
 BatchEstimationNotFoundErrorSkip.TYPE = Error
-BatchEstimationNotFoundErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 該当する明細が存在しないため処理をスキップします。
+BatchEstimationNotFoundErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 該当する明細が存在しないため同じRTS見積番号を指定したデータの処理をスキップします。
 BatchEstimationQtyNotMatchErrorSkip.ID = RBA00017
 BatchEstimationQtyNotMatchErrorSkip.TYPE = Error
-BatchEstimationQtyNotMatchErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 明細の数量が一致しないため処理をスキップします。
+BatchEstimationQtyNotMatchErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 明細の数量が一致しないため同じRTS見積番号を指定したデータの処理をスキップします。
 BatchCallApiErrorSkip.ID = RBA00018
 BatchCallApiErrorSkip.TYPE = Error
 BatchCallApiErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} {3}に失敗したため処理をスキップします。
