#3699 FFM受注データファイル取込バッチ用エラーメッセージ修正漏れ対応

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -415,7 +415,7 @@ BatchEstimationQtyNotMatchErrorSkip.TYPE = Error
 BatchEstimationQtyNotMatchErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 明細の数量が一致しないため同じRTS見積番号を指定したデータの処理をスキップします。
 BatchCallApiErrorSkip.ID = RBA00018
 BatchCallApiErrorSkip.TYPE = Error
-BatchCallApiErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} {3}に失敗したため処理をスキップします。
+BatchCallApiErrorSkip.MSG = RTS見積番号＝{0} {1}に失敗したため処理をスキップします。
 BatchEstimationNumberOfDetailsErrorSkip.ID = RBA00019
 BatchEstimationNumberOfDetailsErrorSkip.TYPE = Error
 BatchEstimationNumberOfDetailsErrorSkip.MSG = RTS見積番号＝{0} 該当する明細の数が一致しないため、同じRTS見積番号を指定したデータの処理をスキップします。
