--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -206,6 +206,9 @@ EstimationCopyCommodityBeforeError.MSG = 商材積上前に見積コピーは行
 MismatchEstimationAmountError.ID = RES00013
 MismatchEstimationAmountError.TYPE = Error
 MismatchEstimationAmountError.MSG = 数量が一致しません。
+MismatchEstimationDetailCountError.ID = RES00014
+MismatchEstimationDetailCountError.TYPE = Error
+MismatchEstimationDetailCountError.MSG = 初期費明細数が一致しません。
 
 #エラーID(契約)
 EntityDoesNotExistContract.ID = RCO00001
