FFM受注バッチ用エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -422,6 +422,12 @@ BatchCallApiErrorSkip.MSG = RTS見積番号＝{0} {1}に失敗したため処理
 BatchEstimationNumberOfDetailsErrorSkip.ID = RBA00019
 BatchEstimationNumberOfDetailsErrorSkip.TYPE = Error
 BatchEstimationNumberOfDetailsErrorSkip.MSG = RTS見積番号＝{0} 該当する明細の数が一致しないため、同じRTS見積番号を指定したデータの処理をスキップします。
+BatchRtsNoNullErrorSkip.ID = RBA00020
+BatchRtsNoNullErrorSkip.TYPE = Error
+BatchRtsNoNullErrorSkip.MSG = 問合せ番号＝{0} RTS見積番号が未設定のため同じ問合せ番号を指定したデータの処理をスキップします。
+BatchRtsNoNotEqualErrorSkip.ID = RBA00021
+BatchRtsNoNotEqualErrorSkip.TYPE = Error
+BatchRtsNoNotEqualErrorSkip.MSG = 問合せ番号＝{0} 異なるRTS見積番号が設定されたデータがあるため同じ問合せ番号を指定したデータの処理をスキップします。
 
 #フィールド名
 SortColumn = ソート項目
