注文情報DTO 項目追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -942,7 +942,6 @@ errorMessage = エラー内容
 errorOccurredAt = エラー発生日時
 beforeQuantity = 変更前数量
 managedEstimationDetailList = 見積明細管理
-<<<<<<< HEAD
 dealerNameKana = 販売店名（カナ）
 setupCompanyName = セットアップ先情報会社名
 setupNameKanji = セットアップ先情報漢字（姓＋名）
@@ -1037,6 +1036,9 @@ pageIdList = ページIDリスト
 dataMapList = 帳票データ部マッピングリスト
 outputFileName = 出力ファイル名
 reportSpecificResult = 帳票テンプレート特定結果
+cancelReason1 = 解約理由1
+cancelReason2 = 解約理由2
+improvementPoint = 改善ポイント
 
 #手配結果登録パラメータ
 id = ID
