サービスカテゴリ区分値追加、メッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -121,6 +121,13 @@ IllegalFormatError.MSG = {0}のフォーマットは{1}です。
 BeforeDateError.ID = ROT00033
 BeforeDateError.TYPE = Error
 BeforeDateError.MSG = {0}は{1}以降の日付を設定してください。
+AccessDeniedError.ID = ROT00034
+AccessDeniedError.TYPE = Error
+AccessDeniedError.MSG = 参照が拒否されました。
+AccessAbstainError.ID = ROT00035
+AccessAbstainError.TYPE = Error
+AccessAbstainError.MSG = 参照が棄権されました。
+
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
