メッセージ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -21,8 +21,8 @@ AuthorizeProcessJudgeStartInfo.ID = IOT00007
 AuthorizeProcessJudgeStartInfo.TYPE = Info
 AuthorizeProcessJudgeStartInfo.MSG = 「参照種別： {0}」 「権限レベル: {1}」 で認可判定を実施します。
 IndividualVoteInfo.ID = IOT00008
-IndividualVoteInfoInfo.TYPE = Info
-IndividualVoteInfotInfo.MSG = {0}の投票処理を実施します。
+IndividualVoteInfo.TYPE = Info
+IndividualVoteInfo.MSG = {0}の投票処理を実施します。
 
 #エラーID(共通)
 ParameterEmptyError.ID = ROT00001
