--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -197,7 +197,7 @@ CannotAcceptedEstimationCancelWithoutContractCancel.TYPE = Error
 CannotAcceptedEstimationCancelWithoutContractCancel.MSG = ライフサイクル状態が「受注」の見積は、契約キャンセル時以外で見積キャンセルを呼び出せません。
 OriginContractDuplicationError.ID = RES00007
 OriginContractDuplicationError.TYPE = Error
-OriginContractDuplicationError.MSG = 同一変更元契約で既に{0}が存在します
+OriginContractDuplicationError.MSG = 同一変更元契約で既に{0}が存在します。{1}
 InvalidParameterError.ID = RES00008
 InvalidParameterError.TYPE = Error
 InvalidParameterError.MSG = パラメーターに不正な項目が設定されています。
