契約番号関連項目 メッセージプロパティ表示名変更

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -482,15 +482,15 @@ dealerFlowOrder = 販売店商流順
 productGrpMasterId = 商品グループマスタID
 lifecycleStatus = ライフサイクル状態
 workflowStatus = ワークフロー状態
-immutableContIdentNumber = 恒久契約識別番号
+immutableContIdentNumber = 契約番号
 caseTitle = 案件名
 estimationNumber = 見積番号
 estimationBranchNumber = 見積番号枝番
 estimationTitle = 見積件名
 estimationType = 見積種別
 estimatedSystemDiv = 見積作成元システム区分
-originContractNumber = 変更元契約番号
-originContractBranchNumber = 変更元契約番号枝番
+originContractNumber = 変更元文書番号
+originContractBranchNumber = 変更元文書番号枝番
 originContractId = 変更元契約ID
 commercialFlowDiv = 商流区分
 issueFormat = 発行書式
@@ -634,8 +634,8 @@ detailAbstrac = 摘要
 itemContrac = 品種(契約用)
 contractType = 契約種別
 caseNumber = 案件番号
-contractNumber = 契約番号
-contractBranchNumber = 契約番号枝番
+contractNumber = 文書番号
+contractBranchNumber = 文書番号枝番
 contractTitle = 契約件名
 introductionPreferredDate = 導入希望日
 changePreferredDate = 変更希望日
