VUP用エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -222,6 +222,12 @@ MismatchEstimationAmountError.MSG = 数量が一致しません。
 MismatchEstimationDetailCountError.ID = RES00014
 MismatchEstimationDetailCountError.TYPE = Error
 MismatchEstimationDetailCountError.MSG = 初期費明細数が一致しません。
+VupLinkageNotFinishedError.ID = RES00015
+VupLinkageNotFinishedError.TYPE = Error
+VupLinkageNotFinishedError.MSG = V-UPへの連携処理を行ってください。
+VupLinkageFinishedError.ID = RES00016
+VupLinkageFinishedError.TYPE = Error
+VupLinkageFinishedError.MSG = V-UPの発注処理を以て自動受注となるため、COTOSの処理は不要です。
 
 #エラーID(契約)
 EntityDoesNotExistContract.ID = RCO00001
