VUP連携エラーメッセージ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -224,7 +224,7 @@ MismatchEstimationDetailCountError.TYPE = Error
 MismatchEstimationDetailCountError.MSG = 初期費明細数が一致しません。
 VupLinkageNotFinishedError.ID = RES00015
 VupLinkageNotFinishedError.TYPE = Error
-VupLinkageNotFinishedError.MSG = V-UPへの連携処理を行ってください。
+VupLinkageNotFinishedError.MSG = 商材積上結果をV-UPへ連携してください。
 VupLinkageFinishedError.ID = RES00016
 VupLinkageFinishedError.TYPE = Error
 VupLinkageFinishedError.MSG = V-UPの発注処理を以て自動受注となるため、COTOSの処理は不要です。
