見積処理不要時のエラーメッセージ変更

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -227,7 +227,7 @@ VupLinkageNotFinishedError.TYPE = Error
 VupLinkageNotFinishedError.MSG = 商材積上結果をV-UPへ連携してください。
 VupLinkageFinishedError.ID = RES00016
 VupLinkageFinishedError.TYPE = Error
-VupLinkageFinishedError.MSG = V-UPの発注処理を以て自動受注となるため、COTOSの処理は不要です。
+VupLinkageFinishedError.MSG = V-UPの発注処理を以て自動受注となるため、COTOSの見積情報への処理は不要です。V-UP発注後に自動作成される契約情報で以降の処理を進めてください。
 
 #エラーID(契約)
 EntityDoesNotExistContract.ID = RCO00001
