--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -138,7 +138,7 @@ LowOrderApproverNotApprovalRemandError.TYPE = Error
 LowOrderApproverNotApprovalRemandError.MSG = 下位承認者が未承認のため、差戻は行えません。
 ApprovedNotApprovalRemandError.ID = ROT00038
 ApprovedNotApprovalRemandError.TYPE = Error
-ApprovedNotApprovalRemandError.MSG = 既に承認済のため、差戻は行えません。
+ApprovedNotApprovalRemandError.MSG = 既に承認または差戻済みのため、差戻は行えません。
 
 
 #エラーID(共通:ファイル系)
