--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -145,7 +145,9 @@ NotDateError.MSG = {0}は{1}以外の日付を設定してください。
 OptimisticLockError.ID = ROT00040
 OptimisticLockError.TYPE = Error
 OptimisticLockError.MSG = 既に他のユーザーに変更されています。最新の状態で再度実行してください。
-
+MomDoesNotExistEmployeeMaster.ID = ROT00041
+MomDoesNotExistEmployeeMaster.TYPE = Error
+MomDoesNotExistEmployeeMaster.MSG = {0}へ、MoMに存在しない社員が設定されています。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
