コミュニケーションにオブザーバーを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -730,6 +730,7 @@ requestToName = 被伝達者氏名
 requestToCandidateName = 被伝達者候補指名
 communicationComment = コメント
 communicatedAt = 伝達日時
+observer = オブザーバー
 productGrpMasterId = 商品グループマスタID
 parent = 親問い合わせ
 children = 子問い合わせリスト
